# star_alleles_comparator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cicd.yml
star_allele_comp/: command.py  comparison.py  plot.py  summary.py
tests/: test1.csv  test2.csv  test3.csv  test_all.py
